--- a/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
+++ b/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
@@ -3,6 +3,9 @@
     <ol>
        <li *ngFor ="let movie of movies">{{movie}}</li>
     </ol>
+    
     <hr>
-
- </div>
+   
+   <input #newMovie (keyup.enter)="addMovie(newMovie.value); newMovie.value=''" type="text" placeholder="Enter Movie Title Here"/>
+   <button (click)="addMovie(newMovie.value); newMovie.value=''">Add</button>
+</div>
